# hse-python-proj

./: README.md  app.Dockerfile  docker-compose.yml  ml.Dockerfile
.github/workflows/: ci.yml
app/: pyproject.toml
app/app/: app.py  database.py  db_models.py  main.py  models.py  settings.py  tests.py
ml/: pyproject.toml
ml/ml/: feedback_consumer.py  settings.py  test_ml.py  tests.py
