[tool.poetry]
name = "python-backend-app"
version = "0.1.0"
description = ""
authors = ["Albert Fazlyev <albert.fz@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
confluent-kafka = "^2.8.0"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
prometheus-fastapi-instrumentator = "^7.0.2"
prometheus-client = "^0.21.1"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
