[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Albert Fazlyev <albert.fz@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
confluent-kafka = "^2.8.0"
pydantic-settings = "^2.7.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
